--- a/requirements.txt
+++ b/requirements.txt
@@ -6,10 +6,13 @@ django-heroku==0.3.1
 djangorestframework==3.10.2
 gunicorn==19.9.0
 idna==2.8
+pipenv==2018.11.26
 psycopg2==2.8.3
 psycopg2-binary==2.8.3
 pytz==2019.2
 requests==2.22.0
 sqlparse==0.3.0
 urllib3==1.25.3
+virtualenv==16.7.2
+virtualenv-clone==0.5.3
 whitenoise==4.1.3
